@@ -47,6 +47,13 @@ method      = verifyAndroidXML
 priority    = 1
 description = Check if file is an Android binary XML file
 
+[verifymp4]
+type        = prerun
+module      = bat.prerun
+method      = verifyMP4
+priority    = 1
+description = Check if file is a valid MP4 file
+
 [verifyogg]
 type        = prerun
 module      = bat.prerun
@@ -87,7 +94,7 @@ module      = bat.fwunpack
 method      = searchUnpack7z
 priority    = 1
 magic       = 7z
-noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio
+noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack 7z compressed files
 
 [ar]
@@ -96,7 +103,7 @@ module      = bat.fwunpack
 method      = searchUnpackAr
 priority    = 2
 magic       = ar
-noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio
+noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack ar archives
 
 #[arj]
@@ -105,7 +112,7 @@ description = Unpack ar archives
 #method      = searchUnpackARJ
 #priority    = 1
 #magic       = arj
-#noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio
+#noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 #description = Unpack ARJ compressed files
 
 [base64]
@@ -113,7 +120,7 @@ type        = unpack
 module      = bat.fwunpack
 method      = searchUnpackBase64
 priority    = 0
-noscan      = xml:graphics:binary:pdf:compressed:audio
+noscan      = xml:graphics:binary:pdf:compressed:audio:video
 description = Decode base64 encoded files
 
 [byteswap]
@@ -121,7 +128,7 @@ type        = unpack
 module      = bat.fwunpack
 method      = searchUnpackByteSwap
 priority    = 100
-noscan      = xml:graphics:pdf:compressed:audio
+noscan      = xml:graphics:pdf:compressed:audio:video
 description = Byteswap files for 16 bit flash
 
 [bzip2]
@@ -130,7 +137,7 @@ module      = bat.fwunpack
 method      = searchUnpackBzip2
 priority    = 1
 magic       = bz2
-noscan      = text:xml:graphics:pdf:gzip:lrzip:audio
+noscan      = text:xml:graphics:pdf:gzip:lrzip:audio:video
 description = Unpack bzip2 compressed files
 
 [cab]
@@ -139,7 +146,7 @@ module      = bat.fwunpack
 method      = searchUnpackCab
 priority    = 1
 magic       = cab
-noscan      = text:xml:graphics:pdf:compressed:audio
+noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack MS Windows Cabinet archives
 
 [compress]
@@ -148,7 +155,7 @@ module      = bat.fwunpack
 method      = searchUnpackCompress
 priority    = 1
 magic       = compress
-noscan      = text:xml:graphics:pdf:audio
+noscan      = text:xml:graphics:pdf:audio:video
 description = Unpack files compressed with compress
 
 [cpio]
@@ -157,7 +164,7 @@ module      = bat.fwunpack
 method      = searchUnpackCpio
 priority    = 2
 magic       = cpio1:cpio2:cpio3:cpiotrailer
-noscan      = text:xml:graphics:pdf:compressed:audio
+noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack CPIO archives
 
 [cramfs]
@@ -166,7 +173,7 @@ module      = bat.fwunpack
 method      = searchUnpackCramfs
 priority    = 3
 magic       = cramfs
-noscan      = text:xml:graphics:pdf:compressed:audio
+noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack cramfs file systems
 
 [exe]
@@ -174,7 +181,7 @@ type        = unpack
 module      = bat.fwunpack
 method      = searchUnpackExe
 priority    = 2
-noscan      = text:xml:graphics:pdf:compressed:audio
+noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack Microsoft Windows Executable files
 
 [ext2fs]
@@ -183,7 +190,7 @@ module      = bat.fwunpack
 method      = searchUnpackExt2fs
 priority    = 3
 magic       = ext2
-noscan      = text:xml:graphics:pdf:compressed:audio
+noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack EXT2/3/4 file systems
 
 [gif]
@@ -201,7 +208,7 @@ module      = bat.fwunpack
 method      = searchUnpackGzip
 priority    = 1
 magic       = gzip
-noscan      = text:xml:graphics:pdf:bz2:lrzip:audio
+noscan      = text:xml:graphics:pdf:bz2:lrzip:audio:video
 description = Unpack gzip compressed files
 
 #[ico]
@@ -210,7 +217,7 @@ description = Unpack gzip compressed files
 #method      = searchUnpackIco
 #priority    = 0
 #magic       = ico
-#noscan      = text:xml:pdf:compressed:graphics:resource:audio
+#noscan      = text:xml:pdf:compressed:graphics:resource:audio:video
 #description = Carve ICO files from a file
 
 [installshield]
@@ -219,7 +226,7 @@ module      = bat.fwunpack
 method      = searchUnpackInstallShield
 priority    = 1
 magic       = installshield
-noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio
+noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack InstallShield compressed files
 
 [iso9660]
@@ -228,7 +235,7 @@ module      = bat.fwunpack
 method      = searchUnpackISO9660
 priority    = 4
 magic       = iso9660
-noscan      = text:xml:graphics:pdf:compressed:audio
+noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack ISO9660 (CD-ROM) file systems
 
 [java_serialized]
@@ -237,7 +244,7 @@ module      = bat.fwunpack
 method      = searchUnpackJavaSerialized
 priority    = 2
 magic       = java_serialized
-noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio
+noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack Java serialized files
 
 [jffs2]
@@ -246,7 +253,7 @@ module      = bat.fwunpack
 method      = searchUnpackJffs2
 priority    = 1
 magic       = jffs2_le
-noscan      = text:xml:graphics:pdf:compressed:audio
+noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack JFFS2 file systems
 
 [lrzip]
@@ -255,7 +262,7 @@ module      = bat.fwunpack
 method      = searchUnpackLRZIP
 priority    = 1
 magic       = lrzip
-noscan      = text:xml:graphics:pdf:bz2:gzip:lzip:audio
+noscan      = text:xml:graphics:pdf:bz2:gzip:lzip:audio:video
 description = Unpack LRZIP compressed files
 
 [lzip]
@@ -264,7 +271,7 @@ module      = bat.fwunpack
 method      = searchUnpackLzip
 priority    = 1
 magic       = lzip
-noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio
+noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack LZIP compressed files
 
 [lzma]
@@ -273,7 +280,7 @@ module      = bat.fwunpack
 method      = searchUnpackLZMA
 priority    = 1
 magic       = lzma_alone:lzma_alone_alt
-noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:resource:dalvik:audio
+noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:resource:dalvik:audio:video
 description = Unpack LZMA compressed files
 
 [lzo]
@@ -282,7 +289,7 @@ module      = bat.fwunpack
 method      = searchUnpackLzo
 priority    = 1
 magic       = lzo
-noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio
+noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack LZO compressed files
 
 [pdf_unpack]
@@ -291,7 +298,7 @@ module      = bat.fwunpack
 method      = searchUnpackPDF
 priority    = 10
 magic       = pdf:pdftrailer
-noscan      = text:xml:graphics:compressed:audio
+noscan      = text:xml:graphics:compressed:audio:video
 description = Carve PDF files from a file
 
 [png]
@@ -309,7 +316,7 @@ module      = bat.fwunpack
 method      = searchUnpackRar
 priority    = 1
 magic       = rar
-noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio
+noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack RAR archives
 
 [romfs]
@@ -318,7 +325,7 @@ module      = bat.fwunpack
 method      = searchUnpackRomfs
 priority    = 1
 magic       = romfs
-noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio
+noscan      = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 description = Unpack romfs file systems
 
 [rpm]
@@ -327,7 +334,7 @@ module      = bat.unpackrpm
 method      = searchUnpackRPM
 priority    = 2
 magic       = rpm:gzip:xz:xztrailer
-noscan      = text:xml:graphics:pdf:compressed:audio
+noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack RPM files
 
 [squashfs]
@@ -336,7 +343,7 @@ module      = bat.fwunpack
 method      = searchUnpackSquashfs
 priority    = 1
 magic       = squashfs1:squashfs2:squashfs3:squashfs4:squashfs5:squashfs6
-noscan      = text:xml:graphics:pdf:compressed:audio
+noscan      = text:xml:graphics:pdf:compressed:audio:video
 description = Unpack squashfs file systmes
 
 [swf]
@@ -345,7 +352,7 @@ module  = bat.fwunpack
 method  = searchUnpackSwf
 priority = 0
 magic = swf
-noscan   = text:xml:pdf:compressed:graphics:resource:audio
+noscan   = text:xml:pdf:compressed:graphics:resource:audio:video
 
 [tar]
 type    = unpack
@@ -353,7 +360,7 @@ module  = bat.fwunpack
 method  = searchUnpackTar
 priority = 3
 magic = tar1:tar2
-noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip:audio
+noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 
 #[ubifs]
 #type    = unpack
@@ -361,14 +368,14 @@ noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip:audio
 #method  = searchUnpackUbifs
 #priority = 3
 #magic = ubifs
-#noscan   = text:xml:graphics:pdf:compressed:audio
+#noscan   = text:xml:graphics:pdf:compressed:audio:video
 
 [upx]
 type    = unpack
 module  = bat.fwunpack
 method  = searchUnpackUPX
 priority = 3
-noscan   = text:xml:graphics:pdf:compressed:audio
+noscan   = text:xml:graphics:pdf:compressed:audio:video
 
 [xz]
 type    = unpack
@@ -376,14 +383,14 @@ module  = bat.fwunpack
 method  = searchUnpackXZ
 priority = 1
 magic = xz:xztrailer
-noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip:audio
+noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 
 [yaffs]
 type    = unpack
 module  = bat.fwunpack
 method  = searchUnpackYaffs2
 priority = 2
-noscan   = text:xml:graphics:pdf:compressed:audio
+noscan   = text:xml:graphics:pdf:compressed:audio:video
 
 [zip]
 type    = unpack
@@ -391,7 +398,7 @@ module  = bat.fwunpack
 method  = searchUnpackZip
 priority = 1
 magic = zip
-noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip:audio
+noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip:audio:video
 
 ##################
 ### leaf scans ###
@@ -401,25 +408,25 @@ noscan   = text:xml:graphics:pdf:bz2:gzip:lrzip:audio
 type    = program
 module  = bat.checks
 method  = scanArchitecture
-noscan  = text:xml:graphics:pdf:compressed:audio
+noscan  = text:xml:graphics:pdf:compressed:audio:video
 
 [busybox-version]
 type    = program
 module  = bat.busyboxversion
 method  = busybox_version
-noscan  = text:xml:graphics:pdf:compressed:audio
+noscan  = text:xml:graphics:pdf:compressed:audio:video
 
 [dproxy]
 type    = program
 module  = bat.checks
 method  = searchDproxy
-noscan  = text:xml:graphics:pdf:compressed:audio
+noscan  = text:xml:graphics:pdf:compressed:audio:video
 
 [ez-ipupdate]
 type    = program
 module  = bat.checks
 method  = searchEzIpupdate
-noscan  = text:xml:graphics:pdf:compressed:audio
+noscan  = text:xml:graphics:pdf:compressed:audio:video
 
 #[file2package]
 #type    = program
@@ -433,45 +440,45 @@ type    = program
 module  = bat.checks
 method  = scanForges
 xmloutput = forgesPrettyPrint
-noscan  = graphics:compressed:audio
+noscan  = graphics:compressed:audio:video
 
 [iproute]
 type    = program
 module  = bat.checks
 method  = searchIproute
-noscan  = text:xml:graphics:pdf:compressed:audio
+noscan  = text:xml:graphics:pdf:compressed:audio:video
 
 [iptables]
 type    = program
 module  = bat.checks
 method  = searchIptables
-noscan  = text:xml:graphics:pdf:compressed:audio
+noscan  = text:xml:graphics:pdf:compressed:audio:video
 
 [kernelchecks]
 type    = program
 module  = bat.kernelanalysis
 method  = kernelChecks
 xmloutput = xmlprettyprint
-noscan  = text:xml:graphics:pdf:compressed:audio
+noscan  = text:xml:graphics:pdf:compressed:audio:video
 
 [kernelmodulelicense]
 type    = program
 module  = bat.kernelanalysis
 method  = analyseModuleLicense
-noscan  = text:xml:graphics:pdf:compressed:audio
+noscan  = text:xml:graphics:pdf:compressed:audio:video
 
 [libs]
 type    = program
 module  = bat.checks
 method  = searchDynamicLibs
 xmloutput = dynamicLibsPrettyPrint
-noscan  = text:xml:graphics:pdf:compressed:audio
+noscan  = text:xml:graphics:pdf:compressed:audio:video
 
 [libusb]
 type    = program
 module  = bat.checks
 method  = searchLibusb
-noscan  = text:xml:graphics:pdf:compressed:audio
+noscan  = text:xml:graphics:pdf:compressed:audio:video
 
 [licenses]
 type    = program
@@ -484,14 +491,14 @@ noscan    = compressed
 type    = program
 module  = bat.checks
 method  = searchLoadLin
-noscan  = text:xml:graphics:pdf:compressed:audio
+noscan  = text:xml:graphics:pdf:compressed:audio:video
 
 [pdf]
 type    = program
 module  = bat.checks
 method  = scanPDF
 xmloutput = pdfPrettyPrint
-noscan  = text:xml:graphics:compressed:audio
+noscan  = text:xml:graphics:compressed:audio:video
 
 #[ranking]
 #type    = program
@@ -499,38 +506,37 @@ noscan  = text:xml:graphics:compressed:audio
 #method  = searchGeneric
 #xmloutput = xmlprettyprint
 #envvars = BAT_SQLITE_AVG_C=/home/armijn/master/avg:BAT_SQLITE_STRINGSCACHE_C=/home/armijn/master/stringscache_c:BAT_SQLITE_DB=/home/armijn/master/master:BAT_RANKING_FULLCACHE=1:BAT_RANKING_LICENSE=1
-#envvars = BAT_SQLITE_AVG_C=/home/armijn/master/avg:BAT_SQLITE_STRINGSCACHE_C=/home/armijn/master/stringscache_c:BAT_SQLITE_DB=/home/armijn/master/master:BAT_RANKING_FULLCACHE=1
-#noscan  = text:xml:graphics:pdf:compressed:resource:audio
+#noscan  = text:xml:graphics:pdf:compressed:resource:audio:video
 
 [redboot]
 type    = program
 module  = bat.checks
 method  = searchRedBoot
-noscan  = text:xml:graphics:pdf:compressed:audio
+noscan  = text:xml:graphics:pdf:compressed:audio:video
 
 [uboot]
 type    = program
 module  = bat.checks
 method  = searchUBoot
-noscan  = text:xml:graphics:pdf:compressed:audio
+noscan  = text:xml:graphics:pdf:compressed:audio:video
 
 [vsftpd]
 type    = program
 module  = bat.checks
 method  = searchVsftpd
-noscan  = text:xml:graphics:pdf:compressed:audio
+noscan  = text:xml:graphics:pdf:compressed:audio:video
 
 [wireless-tools]
 type    = program
 module  = bat.checks
 method  = searchWirelessTools
-noscan  = text:xml:graphics:pdf:compressed:audio
+noscan  = text:xml:graphics:pdf:compressed:audio:video
 
 [wpa-supplicant]
 type    = program
 module  = bat.checks
 method  = searchWpaSupplicant
-noscan  = text:xml:graphics:pdf:compressed:audio
+noscan  = text:xml:graphics:pdf:compressed:audio:video
 
 #####################
 ### postrun scans ###
@@ -540,19 +546,19 @@ noscan  = text:xml:graphics:pdf:compressed:audio
 #type    = postrun
 #module  = bat.images
 #method  = generateImages
-#noscan  = text:xml:graphics:pdf:audio
+#noscan  = text:xml:graphics:pdf:audio:video
 #envvars = BAT_IMAGEDIR=/tmp/images:BAT_IMAGE_MAXFILESIZE=100000000
 #
 #[hexdump]
 #type    = postrun
 #module  = bat.generatehexdump
 #method  = generateHexdump
-#noscan  = text:xml:graphics:pdf:audio
+#noscan  = text:xml:graphics:pdf:audio:video
 #envvars = BAT_REPORTDIR=/tmp/images:BAT_IMAGE_MAXFILESIZE=100000000
 #
 #[uniquehtml]
 #type    = postrun
 #module  = bat.generateuniquehtml
 #method  = generateHTML
-#noscan  = text:xml:graphics:pdf:audio
+#noscan  = text:xml:graphics:pdf:audio:video
 #envvars = BAT_REPORTDIR=/tmp/images
